<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/nameText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:autofillHints="@string/surname"
                android:hint="@string/name"
                android:inputType="textPersonName"
                tools:ignore="UnusedAttribute">

            </EditText>

            <EditText
                android:id="@+id/surNameText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/surname"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                tools:ignore="UnusedAttribute">

            </EditText>
        </LinearLayout>


        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.607">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>